--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -154,7 +154,7 @@ header {
                 }
                 
                 font-size: $font_size_nav;
-                font-weight: normal;
+                font-weight: bold;
                 text-align: left;
                 white-space: nowrap;
                 display: block;
