--- a/_sass/layout_post.scss
+++ b/_sass/layout_post.scss
@@ -392,7 +392,7 @@ section.post_column_main {
     }
 
     table {
-        width: 100%;
+        width: auto;
         overflow: scroll;
         tbody tr {
             td,
@@ -636,7 +636,7 @@ section.post_column_main {
             }
             line-height: $font_line_height_tag;
             display: inline-block;
-            padding: 4px 8px 6px 8px;
+            padding: 4px 9px 3px 8px;
             margin-right: 5px;
             margin-bottom: 8px;
             background: lighten($color_hr_default, 6%);
