--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -33,45 +33,44 @@
                     url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700);
 }
 
-/*
 @font-face {
     font-family:    'Roboto Condensed Light';
     src:            local('Roboto Condensed Light'),
                     local('RobotoCondensed-Light'),
-                    url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700);
+                    url(https://fonts.googleapis.com/css?family=Roboto+Condensed:300,700);
 }
-*/
 
 @font-face {
     font-family:    'Oswald';
     src:            local('Oswald Regular'),
                     local('Oswald-Regular'),
-                    url(https://fonts.gstatic.com/s/oswald/v11/pEobIV_lL25TKBpqVI_a2w.woff2) format('woff2');
+                    url(https://fonts.googleapis.com/css?family=Oswald:400,700) format('woff2');
 }
 
+/*
 @font-face {
     font-family:    'Oswald Light';
     src:            local('Oswald Light'),
                     local('Oswald-Light'),
                     url(https://fonts.googleapis.com/css?family=Oswald:300) format('woff2');
 }
+*/
+
 
 
 $font_serif:                "Liberation Serif", Palatino, "Palatino Linotype", "Times New Roman", Georgia, Times, serif;
 $font_serif_thin:           "Noto Serif", "Droid Serif", "Slabo 27px", Palatino, "Palatino Linotype", "Times New Roman", Georgia, Times, serif;
-$font_sans:                 "Oswald", "Roboto", "Source Sans", "Lucida Sans", Helmet, Freesans, Helvetica, Arial, sans-serif;
-$font_sans_thin:            "Oswald Light", "Roboto Condensed", "Source Sans Pro", "Droid Sans", "Miriam Libre", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Helmet, Freesans, Helvetica, Arial, sans-serif;
-$font_sans_alt:             "Roboto", "Source Sans", "Lucida Sans", Helmet, Freesans, Helvetica, Arial, sans-serif;
-$font_sans_thin_alt:        "Roboto Condensed", "Source Sans Pro", "Droid Sans", "Miriam Libre", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Helmet, Freesans, Helvetica, Arial, sans-serif;
+
+$font_sans:                 "Roboto", "Source Sans", "Lucida Sans", Helmet, Freesans, Helvetica, Arial, sans-serif;
+$font_sans_thin:            "Roboto Condensed", "Source Sans Pro", "Droid Sans", "Miriam Libre", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Helmet, Freesans, Helvetica, Arial, sans-serif;
+$font_sans_light:           "Roboto Condensed Light", "Roboto Condensed", "Source Sans Pro", "Droid Sans", "Miriam Libre", "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Helmet, Freesans, Helvetica, Arial, sans-serif;
+
+$font_sans_alt:             "Oswald", "Source Sans", "Lucida Sans", Helmet, Freesans, Helvetica, Arial, sans-serif;
+
 
 $font_monospace:            Consolas, Bitstream Vera Sans Mono, Lucida Console, "Courier New", "Courier", Terminal, monospace;
 
-// Title
-$font_title:                $font_serif;
-$font_weight_title:         bold;
-$font_size_title:           20px;
-$font_title_tagline:        $font_serif_thin;
-$font_size_title_tagline:   14px;
+
 
 // Default
 $font_default:              $font_serif_thin;
@@ -110,11 +109,12 @@ $word_spacing:              0.155em;
 // Specifics
 // -----------------------------------------------------------------------------
 
-$font_site_title:               $font_sans;
+$font_site_title:               $font_sans_alt;
 $font_size_site_title:          13px;
+$font_weight_site_title:        normal;
 
 // Navigation
-$font_nav:                      $font_sans_alt;
+$font_nav:                      $font_sans;
 $font_size_nav:                 11px;
 
 $font_size_page_nav:            $font_size_nav + 2;
@@ -128,13 +128,15 @@ $font_size_caption:             11px;
 $font_line_height_caption:      14px;
 
 // Label
-$font_label:                    $font_sans_alt;
+$font_label:                    $font_sans;
 $font_size_label:               11px;
 $font_weight_label:             bold;
+$font_letter_spacing_label:     0.25px;
+$font_word_spacing_label:       2px;
 
-$font_sub_label:                $font_sans;
-$font_size_sub_label:           11px;
-$font_weight_sub_label:         normal;
+$font_sub_label:                $font_sans_light;
+$font_size_sub_label:           12px;
+$font_weight_sub_label:         bold;
 
 // Page and Post
 $font_page_title:                   $font_heading;
@@ -182,24 +184,6 @@ $font_footnote_link:            $font_serif_thin;
 $font_size_footnote_link:       $font_size_default;
 $font_footnote:                 $font_serif;
 $font_size_footnote:            $font_size_default;
-
-
-
-
-
-// Index page
-//$font_news_title:               $font_heading;
-$font_news_date:                $font_default;
-$font_news_excerpt:             $font_default;
-$font_news_text:                $font_default;
-$font_size_news_title:          14px;
-$font_size_news_date:           $font_size_default;
-$font_size_news_excerpt:        $font_size_default;
-$font_size_news_text:           $font_size_default;
-$font_line_height_news_title:   16px;
-$font_line_height_news_date:    $font_line_height_default;
-$font_line_height_news_excerpt: $font_line_height_default;
-$font_line_height_news_text:    $font_line_height_default;
 
 
 
@@ -278,5 +262,5 @@ $font_size_license:             $font_size_default + 2;
 $font_line_height_footer:       $font_line_height_default;
 
 // Link buttons
-$font_button:                   $font_sans_alt;
+$font_button:                   $font_sans;
 $font_size_button:              13px;
