--- a/_sass/layout_hub.scss
+++ b/_sass/layout_hub.scss
@@ -21,11 +21,13 @@ div.section_container_wrapper {
             font-size: $font_size_label + 1;
         }
         font-weight: $font_weight_label;
+        letter-spacing: $font_letter_spacing_label;
+        word-spacing: $font_word_spacing_label;
+        
         color: $color_main_bg;
         background: $color_sidebar_label;
         text-align: left;
         text-transform: uppercase;
-        letter-spacing: 0.25px;
         margin: 0;
         float: left;
         display: inline-block;
