--- a/_includes/post_recent.html
+++ b/_includes/post_recent.html
@@ -1,12 +1,17 @@
-<div id="recent_posts_block" class="block block_margin_top block_default_fonts">
-    <h1>Recent Events</h1><div class="right_filler">&nbsp;</div>
-    {% comment %}
-    The following div uses an id for use in the script below which
-    requires a unique id. Otherwise, the html content previously
-    created will be fetched if we use 'entries' as selector in the
-    script.
-    {% endcomment %}
-    <div id="recent_post_entries" class="entries">
+<div id="recent_posts_section" class="section_container_wrapper section_container_wrapper_border">
+    <h1>Recent Events</h1>
+
+    <div class="section_container top_margin_10">
+        <div class="block block_default_fonts">
+            {% comment %}
+            The following div uses an id for use in the script below which
+            requires a unique id. Otherwise, the html content previously
+            created will be fetched if we use 'entries' as selector in the
+            script.
+            {% endcomment %}
+            <div id="recent_post_entries" class="entries">
+            </div>
+        </div>
     </div>
 </div>
 
