--- a/_includes/post_related.html
+++ b/_includes/post_related.html
@@ -1,51 +1,42 @@
-<div id="related_posts_block" class="block block_margin_top block_default_fonts">
-    <h1>Related Events</h1><div class="right_filler">&nbsp;</div>
-    <div class="entries">
-        {% comment %}
-        <!-- The following code snippet was taken from http://zhangwenli.com -->
-        <!-- http://zhangwenli.com/blog/2014/07/15/jekyll-related-posts-without-plugin/ -->
-        {% endcomment %}
-        {% assign postCount = 0 %}
-        {% assign foundPost = false %}
-        {% for post in site.categories['news'] %}
+{% comment %}
+<!-- The following code snippet was taken from http://zhangwenli.com -->
+<!-- http://zhangwenli.com/blog/2014/07/15/jekyll-related-posts-without-plugin/ -->
+{% endcomment %}
 
-            {% if post.categories contains 'newsbit' %}
-                {% continue %}
+{% assign list_posts = "" | split: "" %}
+{% assign counter = 0 %}
+{% assign max_post_count = 5 %}
+
+{% assign foundPost = false %}
+{% for post in site.categories['news'] %}
+    {% if post.title != page.title %}
+        {% for page_tag in page.tags %}
+            {% if post.tags contains page_tag %}
+                {% assign foundPost = true %}
+                {% break %}
             {% endif %}
-
-            {% if post.title != page.title %}
-                {% for thisTag in page.tags %}
-                    {% if post.tags contains thisTag %}
-                        {% assign foundPost = true %}
-                        {% break %}
-                    {% endif %}
-                {% endfor %}
-
-                {% if foundPost == true %}
-                    <div class="entry">
-                        <h2><a href="{{ post.url }}.html">{{ post.title }}</a></h2>
-                        {% if post.date == nil %}
-                            <p class="date">Undated</p>
-                        {% else %}
-                            <p class="date">{{ post.date | date: site.data.format.date_only }}</p>
-                        {% endif %}
-                        <p class="excerpt">{{ post.excerpt }}</p>
-                        {% if site.debug %}
-                        <p class="tags">{{ page.tags }}</p>
-                        {% endif %}
-                    </div>
-                    {% assign foundPost = false %}
-                    {% assign postCount = postCount | plus: 1 %}
-                    {% if postCount == 5 %}
-                        {% break %}
-                    {% endif %}
-                {% endif %}
-            {% endif %}
-
         {% endfor %}
 
-        {% if postCount == 0 %}
-            <p class="no_entries">There is no related news.</p>
+        {% if foundPost == true %}
+            {% assign list_posts = list_posts | push: post %}
+            {% assign foundPost = false %}
+            {% assign counter = counter | plus: 1 %}
+            {% if counter == max_post_count %}
+                {% break %}
+            {% endif %}
         {% endif %}
+    {% endif %}
+{% endfor %}
+
+{% assign show_items = "" | split: "" %}
+{% assign show_items = show_items | push: "date" %}
+{% assign show_items = show_items | push: "excerpt" %}
+{% assign show_items = show_items | push: "description" %}
+
+<div id="related_posts_section" class="section_container_wrapper section_container_wrapper_border">
+    <h1>Related Posts</h1>
+
+    <div class="section_container top_margin_10">
+        {% include block_default.html posts=list_posts show=show_items %}
     </div>
 </div>
