--- a/_includes/block_default.html
+++ b/_includes/block_default.html
@@ -12,7 +12,7 @@ Example:
     {% assign show_items = show_items | push: "description" %}
 
     {% assign posts = site.data.government.branch %}
-    {% include block_list.html post=posts show=show_items counter="no" link_target_new_window="yes" %}
+    {% include block_default.html posts=posts show=show_items link_target_new_window="yes" %}
 {% endcomment %}
 
 <div class="block block_default_fonts">
@@ -22,6 +22,5 @@ Example:
             {% include block_entry.html post=post show=include.show %}
         </div>
         {% endfor %}
-
     </div>
 </div>
