Update quotes display

--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -240,11 +240,11 @@ $font_line_height_related_post_excerpt: $font_line_height_default;
 
 // Quotations
 $font_quotes:               $font_default;
-$font_quotes_author:        $font_sans_thin;
-$font_quotes_context:       $font_serif_thin;
+$font_quotes_author:        $font_sans_light;
+$font_quotes_context:       $font_sans_thin;
 $font_size_quotes:          14px;
-$font_size_quotes_author:   12px;
-$font_size_quotes_context:  12px;
+$font_size_quotes_author:   13px;
+$font_size_quotes_context:  13px;
 $font_line_height_quotes:   $font_size_quote + 4;
 
 // Current date/time
