--- a/_includes/post_related.html
+++ b/_includes/post_related.html
@@ -2,7 +2,7 @@
 <!-- The following code snippet was taken from http://zhangwenli.com -->
 <!-- http://zhangwenli.com/blog/2014/07/15/jekyll-related-posts-without-plugin/ -->
 {% endcomment %}
-
+{% capture empty %}
 {% assign list_posts = "" | split: "" %}
 {% assign counter = 0 %}
 {% assign max_post_count = 5 %}
@@ -32,7 +32,7 @@
 {% assign show_items = show_items | push: "date" %}
 {% assign show_items = show_items | push: "excerpt" %}
 {% assign show_items = show_items | push: "description" %}
-
+{% endcapture %}{% assign empty = nil %}
 <div id="related_posts_section" class="section_container_wrapper section_container_wrapper_border">
     <h1>Related Posts</h1>
 
