Add shortcut key for search page

--- a/_includes/links_navigation.html
+++ b/_includes/links_navigation.html
@@ -22,7 +22,7 @@
                 <hr>
                 <a href="/info/">Information</a>
                 <hr>
-                <a href="/search/">Search</a>
+                <a href="/search/" accesskey="c">Search</a>
                 <hr>
 
                 {% for item in site.data.socmed %}
