Smaller index page and page meta data text sizes

--- a/_sass/font.scss
+++ b/_sass/font.scss
@@ -147,9 +147,9 @@ $font_page_text:                    $font_default;
 
 $font_size_page_title:              $font_size_heading;
 $font_size_page_title_code:         $font_size_heading;
-$font_size_page_meta:               $font_size_default + 1;
-$font_size_page_date:               $font_size_default + 1;
-$font_size_page_excerpt:            $font_size_default + 1;
+$font_size_page_meta:               $font_size_default;
+$font_size_page_date:               $font_size_default;
+$font_size_page_excerpt:            $font_size_default;
 $font_size_page_text:               $font_size_default !global;
 
 $font_line_height_page_title:       $font_size_heading + 4;
@@ -193,9 +193,9 @@ $font_hub_default_excerpt:              $font_default;
 $font_hub_default_text:                 $font_default;
 
 $font_size_hub_default_title:           14px;
-$font_size_hub_default_date:            $font_size_default + 1;
-$font_size_hub_default_excerpt:         $font_size_default + 1;
-$font_size_hub_default_text:            $font_size_default + 1;
+$font_size_hub_default_date:            $font_size_default;
+$font_size_hub_default_excerpt:         $font_size_default;
+$font_size_hub_default_text:            $font_size_default;
 
 $font_line_height_hub_default_title:    16px;
 $font_line_height_hub_default_date:     $font_line_height_default;
