--- a/_includes/links_navigation.html
+++ b/_includes/links_navigation.html
@@ -59,7 +59,7 @@
 
     {% unless page.title == "Search" %}
     <div id="search">
-        <form role="search" method="get" action="{{site.baseurl}}/search/" class="style_one">
+        <form role="search" method="get" action="{{site.baseurl}}/search/">
             <input accesskey="s" type="text" name="q" id="search_input" autocomplete="off" title="Search string containing space must be enclosed in single or double quotes." required>
         </form>
     </div>
