--- a/_includes/head.html
+++ b/_includes/head.html
@@ -132,13 +132,7 @@
     <script src="{{ site.baseurl }}/javascripts/respond.js"></script>
     <script src="{{ site.baseurl }}/javascripts/moment.js"></script>
     <script src="{{ site.baseurl }}/javascripts/tooltip.js"></script>
-    <!-- For search.json -->
-    {% if site.debug %}
-    <script src="{{ site.baseurl }}/javascripts/tipuesearch_content.js"></script>
-    {% endif %}
-    <!-- After customization, do not forget to compress the javascript file -->
-    <script src="{{ site.baseurl }}/javascripts/search.js"></script>
-    <script src="{{ site.baseurl }}/javascripts/smartypants.js"></script>
+    <script src="{{ site.baseurl }}/javascripts/dtsearch.js"></script>
 
     <!-- Load Google fonts asynchroneously -->
     <!-- Ref: http://haisum.github.io/2014/11/03/google-fonts-asynchroneous-loading/ -->
