--- a/_includes/search_left_sidebar.html
+++ b/_includes/search_left_sidebar.html
@@ -1,4 +1,37 @@
 <section class="column_left_sidebar">
-    <p>The search facility can search for multiple <i>search strings</i>. Each found article is <i>ranked</i> according to the number of <i>search strings</i> found in that article. The result is displayed with the highest rank at the top of the list.</p>
-    <p>For user convenience, a quick access to the search facility is provided as a <i>search box</i> on top of all pages except this Search page.</p>
+    <b>Search Tokens</b><br>
+    <p>Search tokens can be either single or multiple words and can be combined together.
+    Multiple word search tokens are searched exactly as is like in phrases, names, etc.
+    To differentiate betweeen the two, multiple word search tokens must be enclosed in double quotes ("").</p>
+    
+    <p>If the <i>search token</i> contains or is enclosed in single (') or double (") quotation marks, use their equivalent Unicode characters.</p>
+           
+    <p>
+    &nbsp;&nbsp;&nbsp;&nbsp;U+2019 ’ - right single quote<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;U+201C “ - left double quote<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;U+201D ” - right double quote<br>
+    </p>
+    
+    <p>Examples of search tokens, shown how they are actually typed or entered in the <em>search input box</em>.</p>
+
+    <p>
+    &nbsp;&nbsp;&nbsp;&nbsp;There’s<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;"president’s speech" holiday<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;"“in double quotes”"<br>
+    </p>
+    
+    {% comment %}
+    <p>
+    &nbsp;&nbsp;Single: duterte<br>
+    &nbsp;&nbsp;Multiple: "rodrigo roa duterte"<br>
+    &nbsp;&nbsp;Combination: sona "rodrigo duterte"<br>
+    </p>
+    {% endcomment %}
+    
+    <b>Search Ranking</b><br>
+    <p>The search facility uses ranking based on the occurrence of the search tokens. Higher ranked found items are displayed on top.</p>
+    
+    <b>Quick-Access</b><br>
+    <p>For quick access to the search facility a <i>search box</i> is present on almost every page.
+    Also, you can use the shortcut key Alt+S or Meta+S.</p>
 </section>
