--- a/_sass/search.scss
+++ b/_sass/search.scss
@@ -1,8 +1,5 @@
 
-
-
-
-form.style_one input#search_input {
+form input#search_input {
 
     background: #fff url('/images/search.png') no-repeat 6px 6px;
     @include set_font($font_serif, $font_size_default + 4, $color_text, bold);
@@ -12,7 +9,7 @@ form.style_one input#search_input {
         width: 100%;
     }
     border: 1px solid $color_box;
-    padding: 4px 5px 3px 25px;
+    padding: 4px 5px 4px 25px;
 
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -35,12 +32,17 @@ form.style_one input#search_input {
 
 // Intentionally placed here to override the #search settings defined above
 #nav_top > div#search {
-    & > form.style_one input#search_input {
-        margin: 1px 5px 0 20px;
+    & > form input#search_input {
+        padding: 4px 5px 3px 25px;
+        margin: 1px 5px 0 14px;
         border: none;
         border-width: 0;
         border-style: none;
         width: 200px;
+        
+        &:focus {
+            //border: 1px solid $color_search_box_top;
+        }
     }
 }
 
@@ -54,6 +56,7 @@ form.style_one input#search_input {
 #search_section_container {
     & > div.section_container {
         & > div.container {
+            /*
             // Heights for the index page has been fixed.
             // Override the settings here.
             height: auto !important;
@@ -70,6 +73,11 @@ form.style_one input#search_input {
             @include min-screen-height(1280px + 1px) {
                 min-height: 300px + 512px !important;
             }
+            */
+            
+            height: auto !important;
+            min-height: 90px !important;
+
             width: 100%;
             min-width: 100%;
             & > p {
@@ -84,7 +92,134 @@ form.style_one input#search_input {
     padding-bottom: 12px;
 }
 
-// Overrides tipue settings
+div#dt_search_content {
+    margin-bottom: 20px;
+    
+    p, ul {
+        margin: 5px 0 0 0;
+    }
+    
+    p {
+        padding: 0;
+        font-family: $font_default;
+        font-size: $font_size_default;
+        line-height: $font_line_height_default;
+        @include max-screen(720px) {
+            font-size: $font_size_default + 2;
+            line-height: $font_line_height_default + 3;
+        }
+        color: $color_text;
+    }
+
+    div.search_feedback {
+    }
+    
+    div.search_results {
+        margin-top: 20px;
+        p {
+            margin: 0;
+        }
+        
+        & > ol {
+            padding-left: 20px;
+        }
+        
+        li {
+            margin-top: 5px;
+            & > div.title > a {
+                @include block_entry_heading($font_hub_default_title, $font_size_hub_default_title, $color_hub_entry_title);
+                line-height: $font_line_height_hub_default_title;
+                @include max-screen(720px) {
+                    font-size: $font_size_hub_default_title + 2;
+                    line-height: $font_line_height_hub_default_title + 3;
+                }
+                padding-bottom: 2px;
+
+                border-bottom: none;
+                &:hover {
+                    color: $color_link;
+                }
+            }
+            
+            & > div > p {
+                font-family: $font_hub_default_date;
+                font-size: $font_size_hub_default_date;
+                line-height: $font_line_height_hub_default_date;
+                @include max-screen(720px) {
+                    font-size: $font_size_hub_default_date + 2;
+                    line-height: $font_line_height_hub_default_date + 3;
+                }
+            }
+            
+            & > div.date > p {
+            }
+            & > div.excerpt > p {
+            }
+            & > div.tags > p {
+            }
+            & > div.score > p {
+            }
+        }
+    }
+    
+    div#search_footer
+    {
+        margin: 30px 0 0 0;
+    }
+    
+    #search_footer_boxes
+    {
+        padding: 0;
+        margin: 0;
+        font: $font_size_default $font_default;
+    }
+    
+    #search_footer_boxes li
+    {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: inline;
+        display: inline-block;
+        cursor: pointer;
+
+        & > a,
+        &.current {
+            font-family: $font_hub_default_title;
+            font-size: $font_size_hub_default_title;
+            line-height: $font_line_height_hub_default_title + 2;
+            @include max-screen(720px) {
+                font-size: $font_size_hub_default_title + 2;
+                line-height: $font_line_height_hub_default_title + 3;
+            }
+            padding: 10px 17px 11px 17px;
+            @include max-screen(720px) {
+                padding: 8px 15px 9px 15px;
+            }
+            background-color: #fff;
+            border: 1px solid #e2e2e2;
+            border-radius: 2px;
+            color: #333;
+            margin-right: 7px;
+            text-decoration: none;
+            text-align: center;
+
+            display: inline-block;
+            cursor: pointer;
+        }
+
+        &.current {
+            background: #f6f6f6;
+        }
+    }
+
+    #search_footer_boxes li a:hover
+    {
+         background: #f6f6f6;
+    }
+}
+
+/*
 div#tipue_search_content {
 
     max-width: 100%;
@@ -168,48 +303,7 @@ div#tipue_search_content {
         }
     }
 
-    #tipue_search_foot_boxes li
-    {
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        display: inline;
-        display: inline-block;
-        cursor: pointer;
 
-        & > a,
-        &.current {
-            font-family: $font_hub_default_title;
-            font-size: $font_size_hub_default_title;
-            line-height: $font_line_height_hub_default_title + 2;
-            @include max-screen(720px) {
-                font-size: $font_size_hub_default_title + 2;
-                line-height: $font_line_height_hub_default_title + 3;
-            }
-            padding: 10px 17px 11px 17px;
-            @include max-screen(720px) {
-                padding: 8px 15px 9px 15px;
-            }
-            background-color: #fff;
-            border: 1px solid #e2e2e2;
-            border-radius: 2px;
-            color: #333;
-            margin-right: 7px;
-            text-decoration: none;
-            text-align: center;
-
-            display: inline-block;
-            cursor: pointer;
-        }
-
-        &.current {
-            background: #f6f6f6;
-        }
-    }
-
-    #tipue_search_foot_boxes li a:hover
-    {
-         background: #f6f6f6;
-    }
 
 }
+*/
