Put post operations at top and bottom of post page

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -50,6 +50,8 @@ layout: default
         {% endfor %}
     </div>
     {% endif %}
+    
+    {% include post_operations.html %}
 
     {% if page.image.source != nil %}
         {% if page.video.source != nil and page.video.layout == "top" %}
