--- a/_sass/layout_post.scss
+++ b/_sass/layout_post.scss
@@ -651,7 +651,7 @@ section.post_column_main {
     }
 }
 
-#post_operations {
+div.post_operations {
     @media print {
         display: none;
     }
