--- a/_includes/post_bottom.html
+++ b/_includes/post_bottom.html
@@ -16,30 +16,6 @@
         </ul>
     </div>
 
-
-    <div id="post_operations">
-        <ul>
-            <li>
-                <a href="javascript:window.print()"
-                    data-toggle="tooltip"
-                    data-placement="top"
-                    title="Print the page or save as PDF file">
-                    <i class="fa fa-print fa-lg" aria-hidden="true"></i>&nbsp;
-                    Print
-                </a>
-            </li>
-            <li>
-                <a href="https://twitter.com/share" data-via="{{ twitter }}"
-                    data-url="{{ page.url }}"
-                    data-text="{{ page.title }}"
-                    data-toggle="tooltip"
-                    data-placement="top"
-                    title="Tweet this page">
-                    <i class="fa fa-twitter fa-lg" aria-hidden="true"></i>&nbsp;
-                    Tweet&nbsp;
-                </a>
-            </li>
-        </ul>
-    </div>
+    {% include post_operations.html %}
 
 </div>
