--- a/_includes/post_operations.html
+++ b/_includes/post_operations.html
@@ -21,7 +21,8 @@
             </a>
         </li>
         <li>
-            <a href="https://facebook.com/sharer.php?u={{ page.url }}" data-via="{{ twitter }}"
+            <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}"
+                onclick="window.open(this.href, 'mywin','left=50,top=50,width=600,height=350,toolbar=0'); return false;"
                 rel="nofollow"
                 target="_blank"
                 title="Share on Facebook">
