Use logo instead of hamburger icon

--- a/_includes/links_navigation.html
+++ b/_includes/links_navigation.html
@@ -2,7 +2,8 @@
     <ul>
 
         <li class="navicon dropdown">
-            <a href="#">≡</a>
+            <!--<a href="#">≡</a>-->
+            <a href="#"><img src="/images/favicon/dutertetimes.png"></a>
             <div class="dropdown_content">
                 <a href="/news/">All News</a>
                 <hr>
