--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -33,7 +33,7 @@ header {
 }
 
 #nav_top {
-    $border_radius: 1px;
+    $border_radius: 2px;
     @media print {
         display: none;
     }
@@ -127,6 +127,27 @@ header {
             font-size: $font_size_site_title + 4;
             font-weight: bold;
         }
+        
+        // For the logo
+        li.navicon > a {
+            margin-left: 10px;
+            margin-right: 5px;
+            padding: 0;
+            border: none;
+            
+            &:hover:not(.active) {
+                background-color: $color_button_hover_text;
+            }
+            
+            img {
+                padding: 0;
+                width: 24px;
+                height: 24px;
+                background: $color_button_hover_bg;
+                border: 1px solid $color_button_hover_bg;
+                border-radius: 2px;
+            }
+        }
 
         // Dropdown menu
 
@@ -139,7 +160,7 @@ header {
             display: none;
             position: absolute;
             background-color: $color_button_bg;
-            min-width: 160px;
+            min-width: 180px;
             box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
             border-bottom-left-radius: 4px;
             border-bottom-right-radius: 4px;
@@ -178,7 +199,8 @@ header {
             display: block;
         }
 
-        li.dropdown:hover a.dropdown_link {
+        //li.dropdown:hover a.dropdown_link {
+        a.dropdown_link {
             border-radius: $border_radius;
         }
     }
