--- a/_sass/layout_hub.scss
+++ b/_sass/layout_hub.scss
@@ -35,11 +35,11 @@ div.section_container_wrapper {
 
     // Title background
     & > h1 {
-        $padding_top: 4px;
+        $padding_top: 5px;
         $padding_bottom: 4px;
         padding: $padding_top 11px $padding_bottom 10px;
         @include max-screen(720px) {
-            padding-top: $padding_top + 1;
+            padding-top: $padding_top - 1;
             padding-bottom: $padding_bottom + 1;
         }
         border-bottom-left-radius: 3px;
