--- a/_sass/quote.scss
+++ b/_sass/quote.scss
@@ -39,6 +39,9 @@
                 font-size: $font_size_quotes + 1;
             }
             line-height: $font_line_height_quotes;
+            @include max-screen(720px) {
+                line-height: $font_line_height_quotes + 4;
+            }
             i.fa-quote-left {
                 color: lighten($color_sidebar_label, 15%);
             }
@@ -46,6 +49,9 @@
 
         &.qauthor {
             @include set_font($font_quotes_author, $font_size_quotes_author, $color_quotes_author);
+            @include max-screen(720px) {
+                font-size: $font_size_quotes_author + 1;
+            }
             font-weight: bold;
             text-transform: uppercase;
             padding-top: 10px;
