Fix navigation bar link styling

--- a/_includes/links_navigation.html
+++ b/_includes/links_navigation.html
@@ -2,8 +2,7 @@
     <ul>
 
         <li class="navicon dropdown">
-            <!--<a href="#">≡</a>-->
-            <a href="#"><img src="/images/favicon/dutertetimes.png"></a>
+            <a href="#"><span>≡</span><img src="/images/favicon/dutertetimes.png"></a>
             <div class="dropdown_content">
                 <a href="/news/">All News</a>
                 <hr>
