Move posts under peace_process category to news

--- a/_includes/links_navigation.html
+++ b/_includes/links_navigation.html
@@ -13,12 +13,13 @@
                 <a href="/news/agrarian/">Agrarian</a>
                 <a href="/news/environment/">Environment</a>
                 <a href="/news/foreign_affairs/">Foreign Affairs</a>
+                <a href="/news/peace_process/">Peace Process</a>
                 <a href="/news/other/">Other News</a>
                 <hr>
                 <a href="/topics/">All Topics</a>
                 <hr>
                 <a href="/topics/opinion">Opinions</a>
-                <a href="/topics/peace_process/">Peace Process</a>
+                
                 <hr>
                 <a href="/info/">Information</a>
                 <hr>
